# study-platform-back

./: .gitignore  Dockerfile  Dockerfile-worker  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
base/: __init__.py
dependencies/: __init__.py  app.py  database.py
schedule/: __init__.py  router.py  schema.py
src/: main.py
src/assignment/: __init__.py  model.py  router.py  schema.py
src/base/: __init__.py
src/dependencies/: __init__.py  app.py  database.py  schedule_runner.py
src/schedule/: __init__.py  model.py  router.py  schema.py
src/task/: __init__.py  model.py  router.py
src/task_queue/: __init__.py
src/tests/: conftest.py  test_main.py
src/tests/fixtures/: __init__.py  app.py  assignment.py  db.py  fxt_app.py  fxt_assignment.py  fxt_db.py  fxt_schedule.py  fxt_task.py  task.py
src/tests/test_assignment/: test_model.py  test_router.py  test_schema.py
src/tests/test_dependencies/: test_app.py  test_database.py
src/tests/test_schedule/: test_model.py  test_router.py  test_schema.py
src/tests/test_task/: test_model.py  test_router.py  test_schema.py
task/: model.py  router.py  schema.py
tests/: conftest.py  test_main.py
tests/test_dependencies/: test_app.py  test_database.py
tests/test_schedule/: test_model.py  test_router.py  test_schema.py
tests/test_task/: test_model.py  test_router.py  test_schema.py
