[project]
name = "study-platform-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Dias",email = "lucas97dias@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite (==0.21.0)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.0)",
    "certifi (==2025.11.12)",
    "click (==8.3.1)",
    "croniter (==6.0.0)",
    "fastapi (==0.123.8)",
    "greenlet (==3.3.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.11)",
    "iniconfig (==2.3.0)",
    "packaging (==25.0)",
    "pluggy (==1.6.0)",
    "psycopg (==3.3.1)",
    "psycopg-binary (==3.3.1)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "pygments (==2.19.2)",
    "pytest (==9.0.1)",
    "pytest-asyncio (==1.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "sqlalchemy (==2.0.44)",
    "starlette (==0.50.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.38.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
